# zcash-scanner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lightwalletd.rs  main.rs  scan.rs
